<resources>
    <string name="app_name">OSCGit</string>
    <string name="title_activity_setting">settings</string>


    <string name="menu_drawer_subItem">其它</string>
    <string name="menu_item_settings">设置</string>
    <string name="menu_item_changeTheme">切换主题</string>

    <string name="action_about">关于</string>
    <string name="action_lagout">登出</string>

    <string name="menu_item_explore">发现</string>
    <string name="menu_item_myself">我的</string>
    <string name="menu_item_language">语言</string>
    <string name="menu_item_shake">摇一摇</string>

    <string name="action_search">搜索</string>
    <string name="action_remind">提醒</string>

    <string name="tab_find_featured_project">推荐项目</string>
    <string name="tab_find_popular_project">热门项目</string>
    <string name="tab_find_latest_project">最近更新</string>

    <string name="tab_myself_news">动态</string>
    <string name="tab_myself_project">项目</string>
    <string name="tab_myself_star">Star</string>
    <string name="tab_myself_watch">Watch</string>

    <string name="general_settings">常规设置</string>
    <string name="right_hand_mode">右手操作模式</string>
    <string name="right_hand_mode_summary">开启右手操作模式，侧边栏将从右边划开，默认从左边划开</string>
    <string name="right_hand_mode_key">right_hand_mode_key</string>

    <string name="other">其它设置</string>
    <string name="advice_feedback">意见反馈</string>
    <string name="give_favor">给应用点赞</string>
    <string name="advice_feedback_key">advice_feedback</string>
    <string name="give_favor_key">give_favor</string>
    <string name="no_email_app_tip">请先安装邮件应用并设置账户,或直接发送邮件至 1250440341@qq.com</string>
    <string name="double_back_exit_hint">再按一次返回键退出应用</string>

    <string name="request_data_error_hint">请求网络数据错误</string>
    <string name="no_description_hint">暂无项目介绍</string>
    <string name="no_login_hint">点击登录</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_personal_info">PersonalInfoActivity</string>
    <string name="login_title">登录</string>
    <string name="username_hint">请输出注册用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="msg_login_username_null">用户名不能为空</string>
    <string name="msg_login_passwork_null">密码不能为空</string>
    <string name="OK">确定</string>
    <string name="cancel">取消</string>
    <string name="login_leave_dialog_title">你确定要取消登录么？</string>
    <string name="login_tips">正在登录</string>
    <string name="login_fail_hint">登录失败</string>
    <string name="login_username">login_username</string>
    <string name="login_pwd">login_pwd</string>
    <string name="need_ano_login_hint">请重新登录</string>
    <string name="drawer_logining_hint">正在登录...</string>
    <string name="login_tool_title">登录</string>
    <string name="personal_info_title">个人信息</string>
    <string name="username">昵称：</string>
    <string name="description">个人介绍：</string>
    <string name="description_null">暂无介绍</string>
    <string name="genenal_info">基本信息</string>
    <string name="additional_info">其它信息</string>
    <string name="email">邮箱：</string>
    <string name="weibo">微博：</string>
    <string name="blog">博客：</string>
    <string name="follow_info">follow</string>
    <string name="followersTitle">followers: </string>
    <string name="starredTitle">stared: </string>
    <string name="followingTitle">following: </string>
    <string name="watchedTitle">watched: </string>

    <string name="title_activity_view_self_info">ViewSelfInfo</string>
    <string name="no_picture_mode_key">no_picture_mode_key</string>
    <string name="no_picture_mode">开启无图浏览模式</string>
    <string name="request_data_error_but_hint">加载失败，请点击重试</string>
    <string name="no_data_but_hint">暂时没有数据，点击重试</string>
    <string name="action_share">分享</string>
    <string name="no_random_project_find">没有找到项目，请重试</string>
    <string name="getting_random_project_hint">正在为你准备项目，客官请稍候...</string>

    <string name="fork_project_title">Fork了项目&#160;</string>
    <string name="leave_project_title">离开了项目&#160;</string>
    <string name="enter_project_title">加入了项目&#160;</string>
    <string name="accept_project_title">接受了项目&#160;</string>
    <string name="pull_project_title">推送到了项目&#160;</string>
    <string name="reopen_project_title">重新打开了项目&#160;</string>
    <string name="close_project_title">关闭了项目&#160;</string>
    <string name="update_project_title">更新了项目&#160;</string>
    <string name="comment_project_title">评论了项目</string>
    <string name="update_project_default_title">更新了动态：</string>
    <string name="in_project_title">在项目</string>
    <string name="create_project_title">创建了</string>
    <string name="branch_title">分支</string>
    <string name="today">今天%s</string>
    <string name="first_before_dat">昨天%s</string>
    <string name="secode_before_dat">前天%s</string>
    <string name="before_day">%1$d天前%2$s</string>
    <string name="before_month">%d个月前</string>
    <string name="before_year">%d年前</string>
    <string name="unknow_time">未知时间</string>
    <string name="title_activity_view_project_info">ViewProjectInfoActivity</string>
    <string name="star_success_hint">star成功</string>
    <string name="unstar_success_hint">unstar成功</string>
    <string name="unstar_ing_hint">正在unstar该项目...</string>
    <string name="star_ing_hint">正在star该项目...</string>
    <string name="unwatch_ing_hint">正在unwatch该项目...</string>
    <string name="watch_ing_hint">正在watch该项目...</string>
    <string name="watch_success_hint">watch成功</string>
    <string name="unwatch_success_hint">unwatch成功</string>
    <string name="title_activity_project_read_me">ProjectReadMeActivity</string>

    <string name="project_code_hint">功能待实现，请耐心等待</string>
    <string name="project_code_readme">Readme</string>
    <string name="project_code_codes">代码</string>
    <string name="project_code_commits">提交</string>
    <string name="project_code_issues">问题</string>
    <string name="no_readme_hint">该项目暂无README.md</string>
    <string name="about_dialog_title">关于</string>
    <string name="about_dialog_message">本产品是Git@OSC非官方客户端，遵循Material Design设计原则\n\nGitHub地址：\nhttps://github.com/BinJing/git-osc-android-project</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="no_notification_hint">通知待实现</string>
    <string name="notification_toolbar_title">我的通知</string>
    <string name="tab_notread_notification">未读通知</string>
    <string name="tab_readable_notification">已读通知</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="project_search_title">项目搜索</string>
    <string name="search_project_hint">点此输入搜索关键词</string>
    <string name="gitosc_login_description">在线代码托管平台,服务永久免费</string>
    <string name="account_title">账户：</string>
    <string name="no_content">暂无</string>
    <string name="no_point">未指定</string>
    <string name="theme_num_hint">%d个主题</string>
    <string name="title_activity_view_language_projecto">ViewLanguageProjectoActivity</string>
    <string name="language_project_title">项目列表</string>
    <string name="search_language_hint">搜索语言</string>
    <string name="foot_state_error">加载数据错误，请重新加载</string>
    <string name="foot_state_empty">没有更多的数据</string>
    <string name="foot_state_more">正在加载...请稍后</string>
    <string name="foot_state_full">已加载全部数据</string>
    <string name="clear_cache_data_key">clear_cache_data_key</string>
    <string name="clear_cache_data">清空缓存</string>
    <string name="clear_cache_success">缓存清除成功</string>
    <string name="clear_cache_fail">缓存清除失败</string>
    <string name="tip_loading">正在加载...</string>
    <string name="tip_load_error">数据加载失败</string>
    <string name="tip_load_empty">暂无数据</string>
    <string name="tip_load_network_error">没有可用网络</string>
    <string name="search_dialog_title">搜索字符串不能为空，请重新输入</string>
    <string name="update_head_title">更新于：%s</string>
    <string name="not_login_title">还未登录，登录成功后重试</string>
    <string name="logout_title">注销登录</string>

</resources>
