<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.jenzz.materialpreference.PreferenceCategory android:title="@string/general_settings">
        <com.jenzz.materialpreference.SwitchPreference
            android:key="@string/right_hand_mode_key"
            android:summary="@string/right_hand_mode_summary"
            android:title="@string/right_hand_mode" />

        <com.jenzz.materialpreference.CheckBoxPreference
            android:key="@string/no_picture_mode_key"
            android:title="@string/no_picture_mode" />

        <!--<com.jenzz.materialpreference.Preference
            android:key="@string/restore_defaultSettings_key"
            android:summary="@string/restore_defaultSettings_summary"
            android:title="@string/restore_defaultSettings" />-->

    </com.jenzz.materialpreference.PreferenceCategory>

    <com.jenzz.materialpreference.PreferenceCategory android:title="@string/other">
        <com.jenzz.materialpreference.Preference
            android:key="@string/advice_feedback_key"
            android:title="@string/advice_feedback" />
        <com.jenzz.materialpreference.Preference
            android:key="@string/give_favor_key"
            android:title="@string/give_favor" />
    </com.jenzz.materialpreference.PreferenceCategory>
</PreferenceScreen>