<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/genenal_info" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/portrait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:src="@drawable/mini_avatar" />

            <TextView
                android:id="@+id/usernameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/portrait"
                android:text="@string/username" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/usernameTitle"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/usernameTitle"
                android:text="Null" />

            <TextView
                android:id="@+id/descriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/usernameTitle"
                android:layout_below="@id/usernameTitle"
                android:layout_marginTop="10dp"
                android:text="@string/description" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/descriptionTitle"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/descriptionTitle"
                android:text="@string/description_null" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/additional_info" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:id="@+id/emailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/emailTitle"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/emailTitle"
                android:text="NULL" />

            <TextView
                android:id="@+id/weiboTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/emailTitle"
                android:layout_below="@id/emailTitle"
                android:layout_marginTop="10dp"
                android:text="@string/weibo" />

            <TextView
                android:id="@+id/weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/weiboTitle"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/weiboTitle"
                android:text="NULL" />

            <TextView
                android:id="@+id/blogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/weiboTitle"
                android:layout_below="@id/weiboTitle"
                android:layout_marginTop="10dp"
                android:text="@string/blog" />

            <TextView
                android:id="@+id/blog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/blogTitle"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/blogTitle"
                android:text="NULL" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/follow_info" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:id="@+id/followersTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/followersTitle" />

            <TextView
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/followersTitle"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/followersTitle"
                android:text="0" />

            <TextView
                android:id="@+id/starredTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/followersTitle"
                android:layout_below="@id/followersTitle"
                android:layout_marginTop="10dp"
                android:text="@string/starredTitle" />

            <TextView
                android:id="@+id/starred"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/starredTitle"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/starredTitle"
                android:text="0" />

            <TextView
                android:id="@+id/followingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/starredTitle"
                android:layout_below="@id/starredTitle"
                android:layout_marginTop="10dp"
                android:text="@string/followingTitle" />

            <TextView
                android:id="@+id/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/followingTitle"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/followingTitle"
                android:text="0" />

            <TextView
                android:id="@+id/watchedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/followingTitle"
                android:layout_below="@id/followingTitle"
                android:layout_marginTop="10dp"
                android:text="@string/watchedTitle" />

            <TextView
                android:id="@+id/watched"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/watchedTitle"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/watchedTitle"
                android:text="0" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
